Bug: Fix whitespace not showing up on frontend

--- a/notes-frontend/src/App.css
+++ b/notes-frontend/src/App.css
@@ -6,6 +6,7 @@
 
 div{
   padding: 10px;
+  white-space: pre-wrap;
 }
 
 .centre {
